      * Mark spaceport bar tab when there is an important NPC
      * Weapon set keybindings change window tabs
      * Use short outfit names when displaying groups of outfits
      * Shown more useful things you have when buying outfits with things other than credits
      * Can sort and filter the mission computer
   * Content
      * 2 new missions
         * Hack the Gibson!
      * New portraits
   * Engine
      * Stats (except inverted stats) are now additive instead of multiplicative
      * Try to merge saves if multiple directories correspond to the same player
      * More robust weapon set support that can handle multiple overlapping weapon sets
      * Faster handling of asteroids with large exclusion areas
      * Added fuel_usage_mod ship stat
      * Fixed player losing navigation targets when unidiff is applied
      * Fixed ai.idir giving wrong answer by M_PI_2 in some cases
      * Threaded more loading components
      * Lua require now caches chunks
      * Dropped SDL_image fallback
      * Use higher internal timer for all platforms
      * Support for Tracy
      * Warn the player if they try to use a name with all space characters
      * Decoupled the collision system from the rendering system
      * Support for 3D models with fancy new effects
      * Added a low memory mode to use fewer and smaller textures with 3D
      * Lazy load ship and outfit graphics to reduce memory usage and decrease load time
      * Use clang-format to format all the C code
      * Use enums internally to represent keybindinsg instead of strings
      * Always use replaygain information when available when loading vorbis files
      * Stop repeating the same warning after a fixed amount of times
   * Fixes
      * PSO and Mizar nebulas have trails again
      * Removed fancy background mode
      * Can remove fighter bays with deployed fighters

* 0.11.5 (unreleased)
   * Fixed FLF-Pirate map not providing jump information

* 0.11.4