@@ -17,6 +17,7 @@
       * Use short outfit names when displaying groups of outfits
       * Shown more useful things you have when buying outfits with things other than credits
       * Can sort and filter the mission computer
+      * Added small optional bounce to NPCs when they start talking
    * Content
       * 2 new missions
          * Hack the Gibson!
